# yew-app

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js
css/: style.min.css
src/: app.rs  lib.rs  main.rs
src-tauri/: tauri.conf.json
src/components/atoms/: hello_p.rs  label_input.rs  mod.rs  submit_button.rs  text_input.rs
src/components/molecules/: custom_form.rs  hello_banner.rs  hello_form.rs  label_input.rs  mod.rs  pokemon_card.rs  wordle_block.rs
src/components/organisms/: about.rs  banner.rs  footer.rs  header.rs  mod.rs  projects.rs
src/pages/: form.rs  hello.rs  home.rs  mod.rs  page_not_found.rs  pokemon.rs  wordle.rs
