[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.7.0"
rand = "0.8.5"
reqwest = "0.11.10"
serde = "1.0.136"
serde_json = "1.0.79"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.57", features = ["HtmlInputElement"] }
wee_alloc = "0.4.5"
yew = "0.19.3"
yew-router = "0.16.0"
getrandom = { version = "0.2.6", features = ["js"] }
console_error_panic_hook = "0.1.7"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
# opt-level = 'z'
# optimization for size
opt-level = 's'
# link time optimization using using whole-program analysis
lto = true
